@@ -17,9 +17,48 @@ package org.apache.solr.handler.component;
  */
 
 
+import com.google.common.collect.ImmutableMap;
+import org.apache.solr.common.SolrException;
+import org.apache.solr.core.PluginInfo;
+import org.apache.solr.core.SolrResourceLoader;
+import org.apache.solr.util.plugin.PluginInfoInitialized;
+
+import java.util.Collections;
+import java.util.Locale;
+
 public abstract class ShardHandlerFactory {
 
   public abstract ShardHandler getShardHandler();
 
   public abstract void close();
+
+  /**
+   * Create a new ShardHandlerFactory instance
+   * @param info    a PluginInfo object defining which type to create.  If null,
+   *                the default {@link HttpShardHandlerFactory} will be used
+   * @param loader  a SolrResourceLoader used to find the ShardHandlerFactory classes
+   * @return a new, initialized ShardHandlerFactory instance
+   */
+  public static ShardHandlerFactory newInstance(PluginInfo info, SolrResourceLoader loader) {
+
+    if (info == null)
+      info = DEFAULT_SHARDHANDLER_INFO;
+
+    try {
+      ShardHandlerFactory shf = loader.findClass(info.className, ShardHandlerFactory.class).newInstance();
+      if (PluginInfoInitialized.class.isAssignableFrom(shf.getClass()))
+        PluginInfoInitialized.class.cast(shf).init(info);
+      return shf;
+    }
+    catch (Exception e) {
+      throw new SolrException(SolrException.ErrorCode.SERVER_ERROR,
+          String.format(Locale.ROOT, "Error instantiating shardHandlerFactory class [%s]: %s",
+              info.className, e.getMessage()));
+    }
+
+  }
+
+  public static final PluginInfo DEFAULT_SHARDHANDLER_INFO =
+      new PluginInfo("shardHandlerFactory", ImmutableMap.of("class", HttpShardHandlerFactory.class.getName()),
+          null, Collections.<PluginInfo>emptyList());
 }
